Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.1, Qt Creator 3.1.0-beta
-
None
-
Ubuntu 12.04 LTS
QtCreator 2.8.1 from qt-project.org
QtCreator master, self-compiled
Description
- Open automake project
- Switch to "Projects" view
- Select "Run"
- Click on "Add deploy step"
- Select "make"
Outcome: Crash
Expected result: Able to add make target as a deploy step
The reason seems that the MakeStep's buildConfiguration() returns 0.
Backtrace:
0x00007fffd62f9cb7 in ProjectExplorer::BuildConfiguration::macroExpander (this=0x0) at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:149
149 if (!m_macroExpander)
(gdb) bt
#0 0x00007fffd62f9cb7 in ProjectExplorer::BuildConfiguration::macroExpander (this=0x0) at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:149
#1 0x00007fffd224c556 in AutotoolsProjectManager::Internal::MakeStepConfigWidget::updateDetails (this=0x17be050) at /home/jgeorg/Projects/qt-creator/src/plugins/autotoolsprojectmanager/makestep.cpp:322
#2 0x00007fffd224c2e0 in AutotoolsProjectManager::Internal::MakeStepConfigWidget::MakeStepConfigWidget (this=0x17be050, makeStep=0x16eed00)
at /home/jgeorg/Projects/qt-creator/src/plugins/autotoolsprojectmanager/makestep.cpp:293
#3 0x00007fffd224ba97 in AutotoolsProjectManager::Internal::MakeStep::createConfigWidget (this=0x16eed00) at /home/jgeorg/Projects/qt-creator/src/plugins/autotoolsprojectmanager/makestep.cpp:223
#4 0x00007fffd632b2ed in ProjectExplorer::Internal::BuildStepsWidgetData::BuildStepsWidgetData (this=0x119da70, s=0x16eed00)
at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildstepspage.cpp:177
#5 0x00007fffd632c638 in ProjectExplorer::Internal::BuildStepListWidget::addBuildStepWidget (this=0x15122d0, pos=1, step=0x16eed00)
at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildstepspage.cpp:326
#6 0x00007fffd632c97d in ProjectExplorer::Internal::BuildStepListWidget::addBuildStep (this=0x15122d0, pos=1) at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildstepspage.cpp:363
#7 0x00007fffd63ff470 in ProjectExplorer::Internal::BuildStepListWidget::qt_static_metacall (_o=0x15122d0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffffffa5f0)
at .moc/debug-shared/moc_buildstepspage.cpp:178
#8 0x00007ffff6831281 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9 0x00007fffd63f5262 in ProjectExplorer::BuildStepList::stepInserted (this=0x101aa80, _t1=1) at .moc/debug-shared/moc_buildsteplist.cpp:107
#10 0x00007fffd62aeb77 in ProjectExplorer::BuildStepList::insertStep (this=0x101aa80, position=1, step=0x16eed00) at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp:182
#11 0x00007fffd632c93d in ProjectExplorer::Internal::BuildStepListWidget::triggerAddBuildStep (this=0x15122d0) at /home/jgeorg/Projects/qt-creator/src/plugins/projectexplorer/buildstepspage.cpp:356
#12 0x00007fffd63ff450 in ProjectExplorer::Internal::BuildStepListWidget::qt_static_metacall (_o=0x15122d0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffffffa810)
at .moc/debug-shared/moc_buildstepspage.cpp:177
#13 0x00007ffff6831281 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007ffff7085132 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#15 0x00007ffff708531f in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#16 0x00007ffff74d7119 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#17 0x00007ffff74dd272 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#18 0x00007ffff70dc144 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#19 0x00007ffff74de80b in QMenu::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#20 0x00007ffff708b894 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#21 0x00007ffff70910bf in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#22 0x00007ffff681ce9c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x00007ffff708c862 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#24 0x00007ffff710c2c1 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#25 0x00007ffff710abae in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#26 0x00007ffff71340d2 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#27 0x00007ffff528ed53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007ffff528f0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007ffff528f164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007ffff684c3bf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#31 0x00007ffff7133d5e in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#32 0x00007ffff681bc82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#33 0x00007ffff681bed7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#34 0x00007ffff74da131 in QMenu::exec(QPoint const&, QAction*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#35 0x00007ffff74e96d2 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#36 0x00007ffff6831281 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#37 0x00007ffff7459ae1 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#38 0x00007ffff745a51c in QAbstractButton::mousePressEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#39 0x00007ffff70dc429 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#40 0x00007ffff708b894 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#41 0x00007ffff70910bf in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#42 0x00007ffff681ce9c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
(gdb) f 1
#1 0x00007fffd224c556 in AutotoolsProjectManager::Internal::MakeStepConfigWidget::updateDetails (this=0x15bc310) at /home/jgeorg/Projects/qt-creator/src/plugins/autotoolsprojectmanager/makestep.cpp:322
322 param.setMacroExpander(bc->macroExpander());
(gdb) p bc
$1 = (ProjectExplorer::BuildConfiguration *) 0x0
Attachments
For Gerrit Dashboard: QTCREATORBUG-10942 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72697,1 | AutoTools: Fix crash on adding MakeStep to deployconfiguration | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |