AutoTools: Fix crash on adding MakeStep to deployconfiguration

Task-number: QTCREATORBUG-10942
Change-Id: I5c46212dda2228c72378e9ba1ad076be8945add1
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>